# folder-agent

./: .env.example  README.md  config.yaml  folder-agent  folder_agent.py  install.sh  pyproject.toml
